[package]
name = "MAKE-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "make_server"
path = "src/start_server.rs"

[[bin]]
name = "loom"
path = "src/start_loom.rs"

[lib]
name = "make"
path = "src/lib.rs"

[dependencies]
serde = "*"
serde_json = "*"
reqwest = { version = "0.11.4", features = ["cookies", "json"] }
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-cors = "0.6.0-beta.2"
actix-web-httpauth = "*"
chrono = { version = "*", features = ["serde"] }
futures = "*"
env_logger = "*"
log = "*"
tokio = { version = "*", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
regex = "*"
ctrlc = "*"
lazy_static = "*"
csv = "*"
toml = "*"
actix-web-static-files = "4.0"
static-files = "0.2.1"
lettre = "*"
lettre_email = "*"
uuid = "*"
actix-web-middleware-redirect-scheme = { version = "4.0.0", git = "https://github.com/AOx0/actix-web-middleware-redirect-scheme" }
tiff = "0.8.0"
image = "*"

[build-dependencies]
static-files = "0.2.1"